packages/components/src/PostListEditDisplay/PostListEditDisplay.module.css
@reference '@devlog/ui-config';

.menus {
    position: sticky;
    top: 92px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 12px;
    @apply px-4 md:px-10;
}

.displaySwitch {
    @apply flex;
    @apply justify-start;
    @apply items-center;
    @apply gap-2;
}

